fix gap on top, mobile

--- a/src/public/css/plx.css
+++ b/src/public/css/plx.css
@@ -853,7 +853,9 @@ a.plx-link-reset:hover {
 }
 
 @media (max-width:959px) {
-
+    .plx-sticky-placeholder{
+        height: 0 !important;
+    }
     .plx-table-responsive,
     .plx-table-responsive tbody,
     .plx-table-responsive td,
